# components/api-server/plugins/gateways/grpc_presenter.go
@@ -27,8 +27,9 @@ func gatewayToProto(d *Gateway) *pb.Gateway {
 		ServiceType:    d.ServiceType,
 		Status:         d.Status,
 		Phase:          d.Phase,
-		Image:          d.Image,
-		RouteAddress:   d.RouteAddress,
+		Image:           d.Image,
+		SupervisorImage: d.SupervisorImage,
+		RouteAddress:    d.RouteAddress,
 		Oidc:           d.Oidc,
 		Route:          d.Route,
 		DatabaseConfig: d.DatabaseConfig,
